# AmbulanceDecisionGame

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: config.yml
Jupyter/src/: MarkovChain.ipynb
Jupyter/testing/: markov_testing.ipynb
data/: README.md
data/brentq_timing/: README.md  main.py
data/brentq_timing_2/: main.csv  main.py
data/game_data/: README.md  main.py
data/initial_rl_experiments/: e0.py  e1.py  main.ipynb  utils.py
data/more_rl_experiments/: main.ipynb
data/reinforcement_learning/: README.md
exp/: model_plots.py  timing_experiments.py
nbs/meetings/: 2020-04-28 metting.ipynb  2020-05-12 metting.ipynb  2020-05-19 meeting.ipynb  2020-05-26 meeting.ipynb  2020-06-02 meeting.ipynb  2020-06-16 meeting.ipynb
nbs/other/: Fix_simulation_when_threshold_greater_than_system_capacity.ipynb  Get_transition_probabilities.ipynb  Match_markov_chain_with_simulation_for_high_lambda_a.ipynb  Overall waiting time.ipynb  Updated_WaitingTime_from_state_probs.ipynb  WaitingTimeBackup.ipynb  WaitingTimeFormula.ipynb  fix_markov_formulation.ipynb  fix_recursion_algorithm_to_visit_all_states.ipynb  (+3 more)
tests/: test_comparisons.py  test_dists.py  test_game.py  test_markov_additional.py  test_markov_blocking.py  test_markov_graphical.py  test_markov_model.py  test_markov_proportion.py  test_markov_tikz.py  test_markov_utils.py  test_markov_waiting.py  test_queue.py  test_server_simulation.py  test_simulation_model.py  test_state_server_dependent_simulation.py
(+208 files in other folders)
